# LifeWithTests

./: CMakeLists.txt  Life.cpp  Life.h  LifeTest.cpp  Main.cpp
